# racv-fuel-price-api

./: .gitignore  Cargo.toml  README.md  wrangler.toml
examples/: response.json5
scripts/: deploy.sh  dev.sh
src/: lib.rs
