[package]
name = "racv-fuel-price-api"
version = "0.1.0"
edition = "2021"
authors = [ "Frank Lan <frank.lan@rea-group.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cbc = "0.1.2"
fake_user_agent = "0.2.1"
reqwest = "0.12.12"
cipher = "^0.4.2"
aes = "0.8.4"
generic-array = "0.14.7"
base64 = "0.22.1"
serde_json = "1.0.139"
worker = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
